# clubswimcomp

./: .env  Cargo.toml  LICENSE-MIT  docker-compose.yaml
clubswimcomp-service/: .env  Cargo.toml
clubswimcomp-service/assets/: registration_card.typst
clubswimcomp-service/migrations/: 20240216135829_initial_schema.sql
clubswimcomp-service/src/: conversions.rs  main.rs  model.rs
clubswimcomp-service/src/api/: competitions.rs  event.rs  groups.rs  mod.rs  participants.rs  registrations.rs  results.rs
clubswimcomp-service/src/db/: competitions.rs  groups.rs  mod.rs  participants.rs  registrations.rs
clubswimcomp-service/src/infra/: certificate.rs  mod.rs  registration_card.rs  typst_compiler.rs
clubswimcomp-service/src/services/: competition.rs  group.rs  mod.rs  participant.rs  registration.rs  registration_card.rs  score.rs
clubswimcomp-ui/: Cargo.toml  index.html  package.json  tailwind.config.js
clubswimcomp-ui/js/: scanner.js
clubswimcomp-ui/src/: api_client.rs  conversions.rs  main.rs
clubswimcomp-ui/src/actions/: mod.rs
clubswimcomp-ui/src/api_client/: competitions.rs  groups.rs  mod.rs  participants.rs  registrations.rs  results.rs
clubswimcomp-ui/src/competitions/: add.rs  details.rs  mod.rs
clubswimcomp-ui/src/components/: competition.rs  data.rs  event.rs  group.rs  mod.rs  page.rs  participant.rs  registrations.rs  scanner.rs  values.rs
clubswimcomp-ui/src/components/tables/: cells.rs  columns.rs  mod.rs
clubswimcomp-ui/src/layout/: app_shell.rs  drawer.rs  mod.rs  navbar.rs  page.rs
clubswimcomp-ui/src/pages/: mod.rs
clubswimcomp-ui/src/pages/competitions/: add_competition.rs  competition_details.rs  competition_overview.rs  competition_scoreboard.rs  create_competition.rs  mod.rs
clubswimcomp-ui/src/pages/event/: mod.rs
clubswimcomp-ui/src/pages/groups/: group_details.rs  group_overview.rs  mod.rs
clubswimcomp-ui/src/pages/participants/: add_participant.rs  (+3 more)
clubswimcomp-ui/style/: style.scss
(+20 files in other folders)
