[package]
name = "clubswimcomp-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clubswimcomp-types = { path = "../clubswimcomp-types" }

anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "postgres",
] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
