[package]
name = "clubswimcomp-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clubswimcomp-types = { path = "../clubswimcomp-types" }

console_error_panic_hook = "0.1.7"
gloo-net = "0.5.0"
leptos = { version = "0.6.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.6", features = ["csr", "nightly"] }
phosphor-leptos = "0.3.1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.91"
leptos-use = "0.10.3"
